--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "chuck@vuurr.com",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.2",
-    "dotenv": "^8.1.0"
+    "axios": ">=1.6.0"
+    "dotenv": "^16.3.0"
   }
 }
